[project]
name = "comfyui-ext"
description = "Nodes:LatentGarbageCollector. This ComfyUI custom node flushes the GPU cache and empty cuda interprocess memory. It's helpfull for low memory environment such as the free Google Colab, especially when the workflow VAE decode latents of the size above 1500x1500."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ntdviet/comfyui-ext"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-ext"
Icon = ""
